expose-service/ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-ingress
spec:
  selector:
    app: node-ingress
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
# apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node-ingress
  labels:
    name: node-ingress
spec:
  rules:
  - host: ingress.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-ingress
            port:
              number: 80
